# chatbot-playground

./: .gitignore  .pre-commit-config.yaml  README.md  Taskfile.yaml  pyproject.toml
src/chatbot_playground/: app.py
